--- a/HBIos/Info.plist
+++ b/HBIos/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Because as cant</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your image is safe with me,bro</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
