--- a/HBIos/Info.plist
+++ b/HBIos/Info.plist
@@ -24,6 +24,10 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To show you cool things nearby</string>
+	<key>NSPrincipalClass</key>
+	<string></string>
 	<key>NSCameraUsageDescription</key>
 	<string>Because as cant</string>
 	<key>NSPhotoLibraryUsageDescription</key>
